// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectTeaser does not render the description by default 1`] = `
<a
  className="donatable-teaser   "
  href="bp.org/p123"
  onClick={[Function]}
  rel="noreferrer"
  target="_parent"
  title="Skateistan Afghanistan"
>
  <div
    className="donatable-teaser--profile-picture"
    style={
      Object {
        "backgroundImage": "url(undefined)",
      }
    }
    title="Skateistan Afghanistan"
  />
  <h2
    className="donatable-teaser--title"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Skateistan Afghanistan",
      }
    }
  />
  <div
    className="donatable-teaser--divider"
  >
    <div
      className="donatable-teaser--factlist"
    >
      <div>
        <span>
          City
        </span>
        , 
        Country
      </div>
      <div>
        <span>
          1.337
        </span>
         
        Spenden
      </div>
      <div>
        <span>
          42 €
        </span>
         
        fehlen noch
      </div>
    </div>
    <img
      alt="Skateistan"
      className="donatable-teaser--carrier-logo"
      src="carrier_pic_url"
    />
  </div>
  <div
    className="donatable-teaser--progress"
  >
    <div
      className="donatable-teaser--progress-bar"
      style={
        Object {
          "width": "33%",
        }
      }
    />
  </div>
</a>
`;

exports[`ProjectTeaser does render the description if showDescription is true 1`] = `
<a
  className="donatable-teaser  donatable-teaser--with-description "
  href="bp.org/p123"
  onClick={[Function]}
  rel="noreferrer"
  target="_parent"
  title="Skateistan Afghanistan"
>
  <div
    className="donatable-teaser--profile-picture"
    style={
      Object {
        "backgroundImage": "url(undefined)",
      }
    }
    title="Skateistan Afghanistan"
  />
  <h2
    className="donatable-teaser--title"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Skateistan Afghanistan",
      }
    }
  />
  <div
    className="donatable-teaser--description"
    dangerouslySetInnerHTML={
      Object {
        "__html": "this is amazing",
      }
    }
  />
  <div
    className="donatable-teaser--divider"
  >
    <div
      className="donatable-teaser--factlist"
    >
      <div>
        <span>
          City
        </span>
        , 
        Country
      </div>
      <div>
        <span>
          1.337
        </span>
         
        Spenden
      </div>
      <div>
        <span>
          42 €
        </span>
         
        fehlen noch
      </div>
    </div>
    <img
      alt="Skateistan"
      className="donatable-teaser--carrier-logo"
      src="carrier_pic_url"
    />
  </div>
  <div
    className="donatable-teaser--progress"
  >
    <div
      className="donatable-teaser--progress-bar"
      style={
        Object {
          "width": "33%",
        }
      }
    />
  </div>
</a>
`;

exports[`ProjectTeaser is possible to force the locale 1`] = `
<a
  className="donatable-teaser   "
  href="coupons.org/p123"
  onClick={[Function]}
  rel="noreferrer"
  target="_parent"
  title="Skateistan Afghanistan"
>
  <div
    className="donatable-teaser--profile-picture"
    style={
      Object {
        "backgroundImage": "url(undefined)",
      }
    }
    title="Skateistan Afghanistan"
  />
  <h2
    className="donatable-teaser--title"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Skateistan Afghanistan",
      }
    }
  />
  <div
    className="donatable-teaser--divider"
  >
    <div
      className="donatable-teaser--factlist"
    >
      <div>
        <span>
          City
        </span>
        , 
        Country
      </div>
      <div>
        <span>
          1.337
        </span>
         
        Spenden
      </div>
      <div>
        <span>
          42 €
        </span>
         
        fehlen noch
      </div>
    </div>
    <img
      alt="Skateistan"
      className="donatable-teaser--carrier-logo"
      src="carrier_pic_url"
    />
  </div>
  <div
    className="donatable-teaser--progress"
  >
    <div
      className="donatable-teaser--progress-bar"
      style={
        Object {
          "width": "33%",
        }
      }
    />
  </div>
</a>
`;

exports[`ProjectTeaser renders 1`] = `
<a
  className="donatable-teaser   "
  href="bp.org/p123"
  onClick={[Function]}
  rel="noreferrer"
  target="_parent"
  title="Skateistan Afghanistan"
>
  <div
    className="donatable-teaser--profile-picture"
    style={
      Object {
        "backgroundImage": "url(undefined)",
      }
    }
    title="Skateistan Afghanistan"
  />
  <h2
    className="donatable-teaser--title"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Skateistan Afghanistan",
      }
    }
  />
  <div
    className="donatable-teaser--divider"
  >
    <div
      className="donatable-teaser--factlist"
    >
      <div>
        <span>
          City
        </span>
        , 
        Country
      </div>
      <div>
        <span>
          1.337
        </span>
         
        Spenden
      </div>
      <div>
        <span>
          42 €
        </span>
         
        fehlen noch
      </div>
    </div>
    <img
      alt="Skateistan"
      className="donatable-teaser--carrier-logo"
      src="carrier_pic_url"
    />
  </div>
  <div
    className="donatable-teaser--progress"
  >
    <div
      className="donatable-teaser--progress-bar"
      style={
        Object {
          "width": "33%",
        }
      }
    />
  </div>
</a>
`;

exports[`ProjectTeaser uses a custom href if given 1`] = `
<a
  className="donatable-teaser   "
  href="coupons.org/p123"
  onClick={[Function]}
  rel="noreferrer"
  target="_parent"
  title="Skateistan Afghanistan"
>
  <div
    className="donatable-teaser--profile-picture"
    style={
      Object {
        "backgroundImage": "url(undefined)",
      }
    }
    title="Skateistan Afghanistan"
  />
  <h2
    className="donatable-teaser--title"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Skateistan Afghanistan",
      }
    }
  />
  <div
    className="donatable-teaser--divider"
  >
    <div
      className="donatable-teaser--factlist"
    >
      <div>
        <span>
          City
        </span>
        , 
        Country
      </div>
      <div>
        <span>
          1.337
        </span>
         
        Spenden
      </div>
      <div>
        <span>
          42 €
        </span>
         
        fehlen noch
      </div>
    </div>
    <img
      alt="Skateistan"
      className="donatable-teaser--carrier-logo"
      src="carrier_pic_url"
    />
  </div>
  <div
    className="donatable-teaser--progress"
  >
    <div
      className="donatable-teaser--progress-bar"
      style={
        Object {
          "width": "33%",
        }
      }
    />
  </div>
</a>
`;
